--- a/html/about.html
+++ b/html/about.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="../index.html" class="logo">
-                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <button class="hamburger-btn" aria-label="Buka Menu">
@@ -121,7 +121,7 @@
             <h1 class="page-title" data-translate-key="about-us-title">Tentang Kami</h1>
 
             <div class="about-layout">
-                <div class="about-text">
+                <div class="about-text-content">
                     <h2 data-translate-key="about-welcome-title">Selamat Datang di MineCart!</h2>
                     <p data-translate-key="about-p1">
                         MineCart lahir dari kecintaan kami terhadap dunia MineCraft dan keinginan untuk menyediakan
@@ -135,11 +135,14 @@
                         berkarakter. Selamat menelusuri dan "Craft Your Style!"
                     </p>
                 </div>
-                <div class="about-image-text">
-                    <h2 data-translate-key="about-hq-title">MineCart HQ</h2>
+
+                <div class="about-media-content">
+                    <figure class="about-image">
+                        <img src="../assets/minecart-hq.png" alt="Kantor Pusat MineCart">
+                        <figcaption data-translate-key="about-hq-title">MineCart HQ</figcaption>
+                    </figure>
                 </div>
             </div>
-
             <div class="dev-tribute">
                 <p data-translate-key="dev-praise-1">DIVDIK BAIK</p>
                 <p data-translate-key="dev-praise-2">DIVDIK GANTENG & CANTIK</p>
