--- a/html/register.html
+++ b/html/register.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="../index.html" class="logo">
-                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <button class="hamburger-btn" aria-label="Buka Menu">
