--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="index.html" class="logo">
-                        <img src="assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <!-- <div class="header-main-right"> -->
@@ -83,6 +83,7 @@
                         <li class="mobile-only mobile-only-logged-in"><a href="#" id="logout-btn-mobile"
                                 data-translate-key="logout">Logout</a></li>
 
+                        <li><a href="#recommended" data-translate-key="recommended-title">Rekomendasi</a></li>
                         <li><a href="index.html" data-translate-key="home-title" class="active">Beranda</a></li>
                         <li><a href="html/products.html" data-translate-key="all-products-title">Semua Produk</a></li>
 
@@ -123,13 +124,13 @@
         <section class="hero">
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="https://picsum.photos/id/1015/1920/1080" alt="Koleksi Pakaian">
+                    <img src="assets/carousel-1.jpg" alt="Gaming Accessories">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://picsum.photos/id/1025/1920/1080" alt="Aksesoris anjing lucu">
+                    <img src="assets/carousel-2.jpg" alt="Organic Coffe">
                 </div>
                 <div class="carousel-slide">
-                    <img src="https://picsum.photos/id/106/1920/1080" alt="Sepatu Gunung">
+                    <img src="assets/carousel-3.jpg" alt="Fashion Store">
                 </div>
             </div>
 
@@ -148,8 +149,7 @@
         <section class="featured-products" id="recommended">
             <div class="container">
                 <h2 class="rekom-mobile" data-translate-key="featured-title">Produk Rekomendasi</h2>
-                <div class="product-grid">
-                </div>
+                <div class="product-grid"></div> <!--- Tempat untuk menampilkan produk rekomendasi -->
                 <div class="see-more-container">
                     <a href="html/products.html" class="cta-button" data-translate-key="see-more-btn">Lihat Lainnya</a>
                 </div>
