--- a/html/cart.html
+++ b/html/cart.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="../index.html" class="logo">
-                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <button class="hamburger-btn" aria-label="Buka Menu">
@@ -128,8 +128,8 @@
                 </div>
                 <div id="cart-items-container">
                 </div>
-                <div id="cart-summary" class="cart-summary">
-                </div>
+                <aside id="cart-summary" class="cart-summary">
+                </aside>
             </div>
         </section>
     </main>
