--- a/html/detail.html
+++ b/html/detail.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="../index.html" class="logo">
-                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <button class="hamburger-btn" aria-label="Buka Menu">
@@ -122,11 +122,12 @@
                 <div id="product-images" class="product-detail-images">
                 </div>
                 <div class="product-detail-info">
-                    <h1 id="product-title">Memuat...</h1>
-                    <p id="product-category" class="category-tag">Kategori</p>
+                    <h1 id="product-title" data-translate-key="loading-product">Memuat...</h1>
+                    <p id="product-category" class="category-tag">Category</p>
                     <p id="product-price" class="price-detail">Rp 0</p>
-                    <p id="product-description">Deskripsi produk sedang dimuat...</p>
-                    <p id="product-stock">Stok: -</p>
+                    <p id="product-description" data-translate-key="loading-description">Deskripsi produk sedang
+                        dimuat...</p>
+                    <p id="product-stock" data-translate-key="loading-stock">Stok: -</p>
 
                     <div class="product-location-info">
                         <h3 data-translate-key="product-seller-title">Penjual:</h3>
@@ -139,6 +140,13 @@
                         Keranjang</button>
                 </div>
             </div>
+            <section class="featured-products related-products-section">
+                <div class="container">
+                    <h2 data-translate-key="related-products-title">Mungkin Anda Suka</h2>
+                    <div class="product-grid" id="related-products-grid">
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
