--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="index.html" class="logo">
-                        <img src="assets/logo-minecart.png" alt="MineCart Logo">
+                        <img src="assets/logo-MineCart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <!-- <div class="header-main-right"> -->
