--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineCart - Beranda</title>
-    <link rel="icon" href="assets/logo-MineCart.png">
+    <link rel="icon" href="assets/logo-temp.png">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="header-main-left">
                     <a href="index.html" class="logo">
-                        <img src="assets/logo-MineCart.png" alt="MineCart Logo">
+                        <img src="assets/logo-temp.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
                     <!-- <div class="header-main-right"> -->
