--- a/html/detail.html
+++ b/html/detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineCart - Detail Produk</title>
-    <link rel="icon" href="../assets/logo-MineCart.png">
+    <link rel="icon" href="../assets/logo-minecart.png">
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
