--- a/html/register.html
+++ b/html/register.html
@@ -90,10 +90,20 @@
 
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
+
+                            <div id="cart-preview-dropdown" class="cart-preview">
+                                <div class="cart-preview-header">
+                                    <h4 id="cart-preview-title">Keranjang Belanja (0)</h4>
+                                    <a href="cart.html" id="cart-preview-view-link"
+                                        data-translate-key="view-cart-btn">Lihat Keranjang</a>
+                                </div>
+                                <div id="cart-preview-items">
+                                </div>
+                            </div>
                         </li>
                         <li>
                             <button id="theme-toggle-btn" class="theme-button" title="Ubah Tema"
