--- a/html/products.html
+++ b/html/products.html
@@ -21,10 +21,12 @@
             <div class="container">
                 <div class="social-media">
                     <span data-translate-key="follow-us-title">Ikuti Kami di</span>
-                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img
+                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank" title="Instagram"><img
                             src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
                     <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img
-                            src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
+                            src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb" title="Facebook"></a>
+                    <a href="https://wa.me/6282181296229" target="_blank"><img src="../assets/logo-whatsapp.webp"
+                            alt="WhatsApp" class="logo-wa" title="WhatsApp"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
