--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineCart - Beranda</title>
     <link rel="icon" href="assets/logo-minecart.png">
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <header>
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
                     <span data-translate-key="follow-us-title">Ikuti Kami di</span>
                     <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img
-                            src="assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
+                            src="assets/logo-instagram.webp" alt="Instagram" class="logo-ig" title="Instagram"></a>
                     <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img
-                            src="assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
+                            src="assets/logo-facebook.webp" alt="Facebook" class="logo-fb" title="Facebook"></a>
+                    <a href="https://wa.me/6282181296229" target="_blank"><img
+                            src="assets/logo-whatsapp.webp" alt="WhatsApp" class="logo-wa" title="WhatsApp"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -57,7 +56,6 @@
                         <img src="assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
-                    <!-- <div class="header-main-right"> -->
                     <button class="hamburger-btn" aria-label="Buka Menu">
                         <span></span>
                         <span></span>
@@ -65,10 +63,8 @@
                     </button>
                 </div>
                 <form class="search-bar" action="html/search.html" method="GET">
-                    <input type="search" name="q" placeholder="Cari di MineCart..." data-translate-key="search-title"
-                        required>
-                    <button type="submit" title="Cari" data-translate-key="search-btn"><img src="assets/logo-search.png"
-                            alt="Cari"></button>
+                    <input type="search" name="q" placeholder="Cari di MineCart..." data-translate-key="search-title" required>
+                    <button type="submit" title="Cari" data-translate-key="search-btn"><img src="assets/logo-search.png" alt="Cari"></button>
                 </form>
 
                 <nav class="header-main-nav">
@@ -125,7 +121,6 @@
                     <img src="assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
-                <!-- </div> -->
             </div>
         </div>
     </header>
