--- a/html/about.html
+++ b/html/about.html
@@ -93,7 +93,7 @@
 
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
@@ -169,6 +169,39 @@
                 </p>
             </div>
         </div>
+        <section class="contact-section">
+            <div class="container">
+                <h2 data-translate-key="contact-title">Hubungi Kami</h2>
+                <div class="contact-grid">
+                    <div class="contact-item">
+                        <img src="../assets/logo-email.png" alt="Email Icon">
+                        <h3 data-translate-key="contact-email-title">Email</h3>
+                        <p><a href="mailto:pangeranvalerensco@gmail.com">pangeranvalerensco@gmail.com</a></p>
+                    </div>
+                    <div class="contact-item">
+                        <img src="../assets/logo-telepon.png" alt="Phone Icon">
+                        <h3 data-translate-key="contact-phone-title">Telepon</h3>
+                        <p><a href="tel:+6282181296229">+62 821 8129 6229</a></p>
+                    </div>
+                    <div class="contact-item">
+                        <img src="../assets/logo-lokasi.webp" alt="Location Icon">
+                        <h3 data-translate-key="contact-location-title">Lokasi</h3>
+                        <p><a href="#" data-translate-key="contact-location-detail">Bandung, Jawa Barat</a></p>
+                    </div>
+                    <div class="contact-item">
+                        <img src="../assets/logo-instagram.webp" alt="Instagram Icon">
+                        <h3 data-translate-key="contact-instagram-title">Instagram</h3>
+                        <p><a href="https://www.instagram.com/varelrivaldi_hutabarat/"
+                                target="_blank">varelrivaldi_hutabarat</a></p>
+                    </div>
+                    <div class="contact-item">
+                        <img src="../assets/logo-facebook.webp" alt="Facebook Icon">
+                        <h3 data-translate-key="contact-facebook-title">Facebook</h3>
+                        <p><a href="https://www.facebook.com/varel.rival.9" target="_blank">Varel Hutabarat</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
