--- a/html/checkout.html
+++ b/html/checkout.html
@@ -79,10 +79,8 @@
                         <li class="mobile-only mobile-only-logged-out"><a href="register.html"
                                 data-translate-key="register">Daftar</a></li>
 
-                        <!-- Hanya muncul saat mobile -->
                         <li class="mobile-only mobile-only-logged-in"><a href="account.html">My Account</a></li>
                         <li class="mobile-only mobile-only-logged-in"><a href="#" id="logout-btn-mobile">Logout</a></li>
-
 
                         <li><a href="../index.html" data-translate-key="home-title">Beranda</a></li>
                         <li><a href="products.html" data-translate-key="all-products-title">Semua Produk</a></li>
@@ -93,7 +91,7 @@
 
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
