--- a/html/register.html
+++ b/html/register.html
@@ -92,7 +92,7 @@
 
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
@@ -134,7 +134,7 @@
 
                     <div class="form-group">
                         <label for="username" data-translate-key="label-username">Nama Pengguna</label>
-                        <input type="text" id="username" name="username" required>
+                        <input type="text" id="username" name="username" required autocomplete="username">
                     </div>
 
                     <div class="form-group">
@@ -144,7 +144,7 @@
 
                     <div class="form-group">
                         <label for="password" data-translate-key="label-password">Password</label>
-                        <input type="password" id="password" name="password" required minlength="6">
+                        <input type="password" id="password" name="password" required minlength="6" autocomplete="current-password">
                     </div>
 
                     <div class="form-group">
