--- a/html/login.html
+++ b/html/login.html
@@ -93,7 +93,7 @@
 
                         <li class="cart-icon-wrapper">
                             <a href="cart.html" title="Keranjang Belanja" data-translate-key="cart-link-title">
-                                <img src="assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
+                                <img src="../assets/logo-keranjang-gelap.png" alt="Keranjang" class="icon-nav"
                                     id="cart-icon-img">
                                 <span id="cart-counter" class="cart-counter">0</span>
                             </a>
@@ -135,12 +135,12 @@
 
                 <div class="form-group">
                     <label for="username" data-translate-key="label-username">Nama Pengguna</label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username" required autocomplete="username">
                 </div>
 
                 <div class="form-group">
                     <label for="password" data-translate-key="label-password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required minlength="6" autocomplete="current-password">
                 </div>
 
                 <button type="submit" class="cta-button" data-translate-key="btn-login">Masuk</button>
