--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html> <!-- Deklarasi Tipe Dokumen HTML5-->
+<html lang="id"> <!-- Bahasa Indonesia sebagai bahasa utama halaman ini -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MineCart - Beranda</title>
-    <link rel="icon" href="assets/logo-minecart.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap" rel="stylesheet">
+<head> <!-- Bagian kepala dari dokumen HTML -->
+    <meta charset="UTF-8"> <!-- Menentukan karakter encoding sebagai UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mengatur viewport untuk responsif -->
+    <title>MineCart - Beranda</title> <!-- Judul halaman yang akan ditampilkan di tab browser -->
+    <link rel="icon" href="assets/logo-minecart.png"> <!-- Menentukan ikon yang akan digunakan di tab browser -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Menghubungkan file CSS eksternal untuk styling halaman -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Mengoptimalkan koneksi ke Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Press+Start+2P&display=swap" rel="stylesheet"> <!-- Menghubungkan font dari Google Fonts -->
 </head>
 
-<body>
-    <header>
-        <div class="header-top">
-            <div class="container">
-                <div class="social-media">
-                    <span data-translate-key="follow-us-title">Ikuti Kami di</span>
+<body> <!-- Bagian utama dari dokumen HTML, tempat konten halaman berada -->
+    <header> <!-- Bagian header yang berisi navigasi dan logo -->
+        <div class="header-top"> <!-- Bagian atas header untuk informasi sosial media dan navigasi -->
+            <div class="container"> <!-- Kontainer untuk mengatur tata letak -->
+                <div class="social-media"> <!-- Bagian untuk ikon media sosial -->
+                    <span data-translate-key="follow-us-title">Ikuti Kami di</span> 
                     <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img
                             src="assets/logo-instagram.webp" alt="Instagram" class="logo-ig" title="Instagram"></a>
                     <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img
